[package]
name = "cw-auth"
version = "0.1.6"
authors = ["aswever <aswever@protonmail.com>"]
edition = "2018"
description = "a utility for integrating off-chain auth with your cosmwasm contracts"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-wasm = "0.3.2"
bech32 = "0.8.1"
sha2 = "0.10.1"
ripemd = "0.1.0"
base64 = "0.13.0"
thiserror = { version = "1.0" }
schemars = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cosmwasm-crypto = "0.16.3"
